[gd_scene load_steps=7 format=3 uid="uid://6nt2subaon3n"]

[ext_resource type="Script" uid="uid://bq2jhkyb2er2e" path="res://screen_states/game.gd" id="1_2fdfw"]
[ext_resource type="PackedScene" uid="uid://b5rmlfimlmky5" path="res://screen_states/game_ui.tscn" id="2_mhc0l"]
[ext_resource type="Script" uid="uid://co6g1v3ikj31g" path="res://global/theme/highlight_text_effect.gd" id="3_phq4f"]
[ext_resource type="PackedScene" uid="uid://cnrc2yro6533p" path="res://game_world/space_shooter_level.tscn" id="4_qh561"]
[ext_resource type="PackedScene" uid="uid://cmt6nkflprs7q" path="res://screen_states/scene_transition_player.tscn" id="5_yigvy"]

[sub_resource type="RichTextEffect" id="RichTextEffect_qwjrg"]
script = ExtResource("3_phq4f")
metadata/_custom_type_script = "uid://co6g1v3ikj31g"

[node name="Game" type="Node"]
script = ExtResource("1_2fdfw")

[node name="SceneTransitionPlayer" parent="." instance=ExtResource("5_yigvy")]
layer = 2

[node name="GameUI" parent="." instance=ExtResource("2_mhc0l")]
fade_time = 1.0
await_time = 2.0

[node name="RichTextLabel" parent="GameUI" index="0"]
visible = true
custom_effects = [SubResource("RichTextEffect_qwjrg")]

[node name="SpaceShooterLevel" parent="." instance=ExtResource("4_qh561")]

[connection signal="main_menu_requested" from="GameUI" to="." method="_on_game_ui_main_menu_requested"]
[connection signal="retry_requested" from="GameUI" to="." method="_on_game_ui_retry_requested"]
[connection signal="game_over" from="SpaceShooterLevel" to="." method="_on_space_shooter_level_game_over"]
[connection signal="level_cleared" from="SpaceShooterLevel" to="." method="_on_space_shooter_level_level_cleared"]

[editable path="SceneTransitionPlayer"]
[editable path="GameUI"]
